@@ -10,7 +10,7 @@ Build-Depends: cdbs,
 	autoconf2.13,
 	quilt,
 	zip,
-	libx11-dev, 
+	libx11-dev,
 	libxt-dev,
 	libxext-dev,
 	libgtk2.0-dev (>= 2.10),
@@ -32,7 +32,7 @@ Build-Depends: cdbs,
 	libnotify-dev (>= 0.4),  
 	libxrender-dev, 
 	libfreetype6-dev,
-	libgnomevfs2-dev (>= 2.0),
+	libgnomevfs2-dev (>= 1:2.0),
         yasm (>= 1.1),
 	xvfb,
 	imagemagick,
@@ -41,13 +41,10 @@ Standards-Version: 3.9.1
 
 Package: firefox-trunk
 Architecture: any
-Depends: fontconfig,
-	psmisc,
-	lsb-release,
-	debianutils (>= 1.16),
+Depends: lsb-release,
 	${misc:Depends},
 	${shlibs:Depends}
-Recommends: ubufox,
+Recommends: xul-ext-ubufox,
 	firefox-trunk-globalmenu
 Provides: www-browser,
 	iceweasel,
